--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,6 +44,7 @@
     <string name="det_type">Genre</string>
     <string name="det_actor">Cast</string>
     <string name="det_dir">Director</string>
+    <string name="det_tvPlayUrl">Play URL</string>
     <string name="det_des"></string>
     <string name="det_synopsis">Synopsis</string>
 
